注释留言板

--- a/index.html
+++ b/index.html
@@ -504,14 +504,14 @@ div::-webkit-scrollbar {
 	</div>
 	<!-- ----video---- -->
 	
-	<!-- ----my_pic---- -->
-	<div class="imgDiv" style="height:1700px; top:1910px;overflow:auto;margin-top:20px;">
+	<!-- ----my_pic---- height:1700px; -->
+	<div class="imgDiv" style="top:1910px;overflow:auto;margin-top:20px;">
 		<div id="m_pic" class="info_container"></div>
 	</div>
 	<!-- ----my_pic---- -->
 	
 	<!-- ----留言板---- -->
-	<div class="imgDiv" style="top:3630px;overflow:auto;margin-top:20px;">
+	<!--<div class="imgDiv" style="top:3630px;overflow:auto;margin-top:20px;">
 		<div class="info_container" style="height:230px">
 			<h2>留言</h2>
 			<ol id="messageList">
@@ -521,7 +521,7 @@ div::-webkit-scrollbar {
 				<input type="submit" value="提交">
 			</form>
 		</div>
-	</div>
+	</div>-->
 	<!-- ----my_pic---- -->
 
 	
