--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ $(function(){
 	$('body').addClass('reveal');
 	var	messageList = [
 		{num:"1", title:"20240414_1",time:"20240414", def:true, content:"想找你却找不到一个合适理由。\n\n也许，喜欢一个人本身并不需要理由。"},
-		{num:"2", title:"20240416_1",time:"20240417", def:false, content:"勇敢一点...\n\n嗯......\n\n以及睡个好觉，晚安啦！"},
+		{num:"2", title:"20240416_1",time:"20240417", def:false, content:"勇敢一点...\n\n嗯......\n\n以及睡个好觉，晚安了。"},
 	];
 	function senMsg(letter){
 		var arr = letter.split('\n\n');
