--- a/index.html
+++ b/index.html
@@ -434,36 +434,46 @@ div::-webkit-scrollbar {
 			</div>
 			<div id="pic_s" data-u="slides" style="cursor: default; position: relative; top: 0px; left: 330px; width: 620px; height: 480px; overflow: hidden; ">  <!-- background:rgba(230,230,230,1);-->
 				<div class="info_card_pic">
-					<img style="height: 480px; width: 310px;" src="img/1.jpg" />
+					<img style="height: 480px; width: 310px;" src="img/mypics/1.jpg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">拍摄于24年元旦</p>
-					<img data-u="thumb" src="img/1.jpg" />
+					<img data-u="thumb" src="img/mypics/1.jpg" />
 				</div>
 				<div class="info_card_pic">
-					<img style="height: 480px; width: 310px;" src="img/pugonying.jpeg" />
+					<img style="height: 480px; width: 310px;" src="img/mypics/pugonying.jpeg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">不以物喜，不以己悲</p>
-					<img data-u="thumb" src="img/pugonying.jpeg" />
+					<img data-u="thumb" src="img/mypics/pugonying.jpeg" />
 				</div>
 				<div class="info_card_pic">
-					<img style="height: 480px; width: 310px;" src="img/xiaoxrk.jpeg" />
+					<img style="height: 480px; width: 310px;" src="img/mypics/xiaoxrk.jpeg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">无言的爱</p>
-					<img data-u="thumb" src="img/xiaoxrk.jpeg" />
+					<img data-u="thumb" src="img/mypics/xiaoxrk.jpeg" />
 				</div>
 				<div class="info_card_pic">
-					<img style="height: 480px; width: 310px;" src="img/feiniao.jpeg" />
+					<img style="height: 480px; width: 310px;" src="img/mypics/feiniao.jpeg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">像飞鸟一般，自由翱翔</p>
-					<img data-u="thumb" src="img/feiniao.jpeg" />
+					<img data-u="thumb" src="img/mypics/feiniao.jpeg" />
 				</div>
 				<!--横图-->
 				<div class="info_card_pic">
-					<img style="margin-top:45px; height: 390px; width: 620px;"  src="img/1705689014646.jpeg" />
+					<img style="margin-top:45px; height: 390px; width: 620px;"  src="img/mypics/1705689014646.jpeg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">日出光芒</p>
-					<img data-u="thumb" src="img/1705689014646.jpeg" />
+					<img data-u="thumb" src="img/mypics/1705689014646.jpeg" />
 				</div>
 				<!--竖图-->
 				<div class="info_card_pic">
-					<img style="height: 480px; width: 310px;" src="img/me2.jpg" />
+					<img style="height: 480px; width: 310px;" src="img/mypics/me2.jpg" />
 					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">内涵及才识是一个人独特的魅力，如何让自己拥有？保持学习和进步。</p>
-					<img data-u="thumb" src="img/me2.jpg" />
+					<img data-u="thumb" src="img/mypics/me2.jpg" />
+				</div>
+				<div class="info_card_pic">
+					<img style="height: 480px; width: 310px;" src="img/mypics/live_1.jpg" />
+					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">生活，挺好的！</p>
+					<img data-u="thumb" src="img/mypics/live_1.jpg" />
+				</div>
+				<div class="info_card_pic">
+					<img style="height: 480px; width: 310px;" src="img/mypics/flower.jpg" />
+					<p style="color:rgb(236,236,236);font-size:130%; overflow:auto; margin:60px;">绽放</p>
+					<img data-u="thumb" src="img/mypics/flower.jpg" />
 				</div>
 			<!--<a data-u="any" href="http://www.jssor.com" style="display:none">Image Gallery with Vertical Thumbnail</a>-->
 			</div>
@@ -585,14 +595,11 @@ function sxLoad(){
 sxLoad();
 //window.onload = sxLoad;
 </script>
+
 <!--m_pic-->
 <script>
 function mPicLoad(){
 	var	mPicList = [
-		//{title:"",src:"./img/1.jpg",content:"拍摄于24年元旦",},
-		//{title:"",src:"./img/pugonying.jpeg",content:"不以物喜，不以己悲",},
-		//{title:"",src:"./img/xiaoxrk.jpeg",content:"无言的爱",},
-		//{title:"",src:"./img/feiniao.jpeg",content:"像飞鸟一般，自由翱翔",},
 		{title:"",src:"./img/pics/mingchaonaxieshi.jpg",content:"书：《明朝那些事》；作者：当年明月。\n临江仙·梦后楼台高锁 晏几道_宋\n梦后楼台高锁，酒醒帘幕低垂。去年春恨却来时。落花人独立，微雨燕双飞。\n记得小苹初见，两重心字罗衣。琵琶弦上说相思。当时明月在，曾照彩云归。",},
 		{title:"",src:"./img/pics/24shi.jpg",content:"书：《二十四史》；以铜为鉴,可以正衣冠,以人为鉴,可以知得失,以史为鉴,可以知兴替。",},
 		{title:"",src:"./img/pics/modaihuangdi.webp",content:"电影：《末代皇帝 The Last Emperor‎ (1987)》；导演: 贝纳尔多·贝托鲁奇；编剧: 贝纳尔多·贝托鲁奇 / 马克·派普罗。",},
@@ -623,6 +630,75 @@ function mPicLoad(){
 mPicLoad();
 </script>
 <!--m_pic-->
+
+<!--music-->
+<div id="QPlayer">
+	<div id="pContent">
+		<div id="player">
+			<span class="cover"></span>
+			<div class="ctrl">
+				<div class="musicTag marquee">
+					<strong>Title</strong>
+					 <span> - </span>
+					<span class="artist">Artist</span>
+				</div>
+				<div class="progress">
+					<div class="timer left">0:00</div>
+					<div class="contr">
+						<div class="rewind icon"></div>
+						<div class="playback icon"></div>
+						<div class="fastforward icon"></div>
+					</div>
+					<div class="right">
+						<div class="liebiao icon"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="ssBtn" style="background:#000 none repeat scroll 0% 0%">
+				<div class="adf"></div>
+		</div>
+	</div>
+	<ol id="playlist"></ol>
+</div>
+<script src="./js/jquery.marquee.min.js"></script>
+<script>
+	var	playlist = [
+		{title:"起风了",artist:"买辣椒也用券",mp3:"./music/买辣椒也用券 - 起风了（Cover 高橋優）.mp3",cover:"http://p2.music.126.net/c0nzSObvxF_DftayAJjXsw==/109951162864860506.jpg?param=130y130",},
+		//{title:"起风了",artist:"买辣椒也用券",mp3:"https://m.hifini.com/music/起风了（旧版）.m4a",cover:"http://p2.music.126.net/c0nzSObvxF_DftayAJjXsw==/109951162864860506.jpg?param=130y130",},
+		//{title:"安和桥",artist:"宋冬野",mp3:"https://m804.music.126.net/20240202003548/03f2269be1b71a9d40c54666b013461c/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/14096566705/d810/fced/f2bb/b07241ed1fac0c1cf4f800b824bc798a.mp3?_authSecret=0000018d656fe69418ea0aaba3830fb6",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
+		{title:"安和桥",artist:"宋冬野",mp3:"./music/宋冬野-安和桥.mp3",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
+		{title:"One Last Kiss",artist:"宇多田ヒカル",mp3:"https://api.liumingye.cn/m/api/link?id=b3f634HzOLrfMF9SfoAs-ZADNQkUBlsjQyjUsKqMGja13S2z0Phw&quality=128&_t=1706803917479&token=20230327.a9ee6471926db1c1bece103826fa7e66",cover:"https://p1.music.126.net/iBApSj7JHCeFdO0W52EpZw==/109951165770552597.jpg?param=130y130",},
+		{title:"冷雨夜",artist:"Beyond",mp3:"https://m804.music.126.net/20240202003812/e120d1e010496d0b7f75222490b4f70d/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/32366012653/b2cd/56f0/54b5/3c777951e3aaea50db17978fc45ef6f4.mp3?_authSecret=0000018d6572178b1ede0aaba394f900",cover:"https://p1.music.126.net/25Um9AXuyzx2CK7t_h2WTA==/53876069773286.jpg?param=130y130",},
+		{title:"执迷不悟",artist:"王菲",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg1ODQ1",cover:"https://i.biliimg.com/bfs/im/60cfc166aacf16f16265a663ed4111ceb6568f3a.png@70w_70h_1c.webp",},
+		{title:"无赖",artist:"郑中基",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg1MTk1",cover:"	https://i.biliimg.com/bfs/im/3771fed2d84bbe5dee0c56d8fc6a3f11d16a757d.jpg@70w_70h_1c.webp",},
+		{title:"习惯失恋",artist:"容祖儿",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wHpHjvjf7c36LlnQ4XyXprbckwMg36ZcvGm&quality=128&_t=1706803815472&token=20230327.8fe949477a743b482869270bd1706861",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000003l02MY0vw8vs.jpg",},
+		{title:"活着viva(女版)",artist:"应嘉俐",mp3:"https://api.liumingye.cn/m/api/link?id=b3f634HzOLrfMF9SfoFZoZlfJR0QElpyEyDZxLaUFi6xxTGH1NRI&quality=128&_t=1706804689847&token=20230327.3585105bc8ed3b66324d4dff44641211",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000000khOzC0Qhtto.jpg",},
+		{title:"野孩子",artist:"杨千嬅",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wfoQjKyeLJi7b1jT9byWszZe0MPgno&quality=128&_t=1706805025063&token=20230327.d1ef3757558850c4e89c0eaa08295f9b",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000001mImhQ4doM89.jpg",},
+		{title:"稀客",artist:"杨千嬅",mp3:"https://api.liumingye.cn/m/api/link?id=m3f63OtUGNZoMDio1KvYG6T84ksjKcPksLXuh1VA7dWSL0qjZFeLha7Qr2x7Be5k&quality=128&_t=1706804993351&token=20230327.e35d85b015d7384cad9d094aea5a4b5a",cover:"https://p2.music.126.net/8w4C39C2OY2fRANvkSXo9Q==/109951163270254519.jpg?param=130y130",},
+		{title:"黑夜中漫舞",artist:"陈奕迅",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzIxMzExNDQwMl8xMDAwMDI2MjA=",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000004S8YQr3UmEbG.jpg",},
+		{title:"在路上",artist:"康小景",mp3:"./music/康小景在路上.ogg",cover:"https://y.qq.com/music/photo_new/T002R300x300M000002pzOKB0MXSDC_1.jpg?max_age=2592000",},
+	    {title:"董小姐",artist:"宋冬野",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wW8GTPhfbZh6ehpFdLyW8PYfUMPjH2Xeg&quality=128&_t=1706805136616&token=20230327.9239512a73966b406c21ea0b75400755",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
+		{title:"南国之舞",artist:"梁翘柏",mp3:"https://api.liumingye.cn/m/api/link?id=m3f63OtUGNZoMDio1Kv5Vvz84wZucIvx4fin12VE7dWSL0qjZFeLha7oq0RrPcZs&quality=128&_t=1706805184479&token=20230327.a45ea04c8336b0ecd6c06ebe81898a8c",cover:"https://p2.music.126.net/lHwwVluAutDy0FmpaslYiw==/5905476953005960.jpg?param=130y130",},
+	    {title:"弥敦道",artist:"洪卓立",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg4Mjkz",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000000aMFTq0Ejfqb.jpg",},
+	    {title:"不必在乎我是谁",artist:"梁静茹",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzIxMzExNDQwMl8xMDAwMDg2MDE=",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M0000028Pdb00tG9aA.jpg",},
+	    
+	];
+  var isRotate = true;
+  var autoplay = true;
+  // {title:"",artist:"",mp3:"https://www.hifini.com/",cover:"",},
+function bgChange(){
+	var lis= $('.lib');
+	for(var i=0; i<lis.length; i+=2){
+	    lis[i].style.background = 'rgba(246, 246, 246, 0.7)';
+    }
+}
+window.onload = bgChange;
+</script>
+<script src="./js/player.js"></script>
+<!--music-->
+
+<!--letter-->
 <script type="text/javascript">
 	function flashTextarea(){
 	  console.log('fl')
@@ -631,8 +707,10 @@ mPicLoad();
 $(function(){
 	$('body').addClass('reveal');
 	var	messageList = [
-		{num:"1", title:"20240414_1",time:"20240414", def:true, content:"想找你却找不到一个合适理由。\n\n也许，喜欢一个人本身并不需要理由。"},
+		{num:"1", title:"20240414_1",time:"20240414", def:true, content:"想找你却找不到一个合适理由。\n\n也许，喜欢一个人本身并不需要理由。\n\n又或许，喜欢就是理由！"},
 		{num:"2", title:"20240417_1",time:"20240417", def:false, content:"勇敢一点...\n\n嗯......\n\n以及睡个好觉，晚安了。"},
+		{num:"3", title:"关于爱你",time:"20240610", def:true, content:"喜欢，是那么一件纯粹的事，\n\n因为我喜欢你，\n\n所以想要对你好，希望你开心，\n\n而不是因为我喜欢你，\n\n所以你也得喜欢我。\n\n\n爱，是一种克制，\n\n因为爱你，所以不忍对你造成打扰及困扰，\n\n又因为爱你，所以忍不住去打扰你。"},
+		
 	];
 	function senMsg(letter){
 		var arr = letter.split('\n\n');
@@ -667,92 +745,21 @@ $(function(){
 	}
 	sendMessage();
 })
-
 </script>
+<!--letter-->
 
-<!--music-->
-<div id="QPlayer">
-<div id="pContent">
-
-	<div id="player">
-		<span class="cover"></span>
-		<div class="ctrl">
-			<div class="musicTag marquee">
-				<strong>Title</strong>
-				 <span> - </span>
-				<span class="artist">Artist</span>
-			</div>
-			<div class="progress">
-				<div class="timer left">0:00</div>
-				<div class="contr">
-					<div class="rewind icon"></div>
-					<div class="playback icon"></div>
-					<div class="fastforward icon"></div>
-				</div>
-				<div class="right">
-					<div class="liebiao icon"></div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="ssBtn" style="background:#000 none repeat scroll 0% 0%">
-	        <div class="adf"></div>
-    </div>
-</div>
-<ol id="playlist"></ol>
-</div>
-
-<script src="./js/jquery.marquee.min.js"></script>
-
-<script>
-	var	playlist = [
-		{title:"起风了",artist:"买辣椒也用券",mp3:"./music/买辣椒也用券 - 起风了（Cover 高橋優）.mp3",cover:"http://p2.music.126.net/c0nzSObvxF_DftayAJjXsw==/109951162864860506.jpg?param=130y130",},
-		//{title:"起风了",artist:"买辣椒也用券",mp3:"https://m.hifini.com/music/起风了（旧版）.m4a",cover:"http://p2.music.126.net/c0nzSObvxF_DftayAJjXsw==/109951162864860506.jpg?param=130y130",},
-		//{title:"安和桥",artist:"宋冬野",mp3:"https://m804.music.126.net/20240202003548/03f2269be1b71a9d40c54666b013461c/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/14096566705/d810/fced/f2bb/b07241ed1fac0c1cf4f800b824bc798a.mp3?_authSecret=0000018d656fe69418ea0aaba3830fb6",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
-		{title:"安和桥",artist:"宋冬野",mp3:"./music/宋冬野-安和桥.mp3",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
-		{title:"One Last Kiss",artist:"宇多田ヒカル",mp3:"https://api.liumingye.cn/m/api/link?id=b3f634HzOLrfMF9SfoAs-ZADNQkUBlsjQyjUsKqMGja13S2z0Phw&quality=128&_t=1706803917479&token=20230327.a9ee6471926db1c1bece103826fa7e66",cover:"https://p1.music.126.net/iBApSj7JHCeFdO0W52EpZw==/109951165770552597.jpg?param=130y130",},
-		{title:"冷雨夜",artist:"Beyond",mp3:"https://m804.music.126.net/20240202003812/e120d1e010496d0b7f75222490b4f70d/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/32366012653/b2cd/56f0/54b5/3c777951e3aaea50db17978fc45ef6f4.mp3?_authSecret=0000018d6572178b1ede0aaba394f900",cover:"https://p1.music.126.net/25Um9AXuyzx2CK7t_h2WTA==/53876069773286.jpg?param=130y130",},
-		{title:"执迷不悟",artist:"王菲",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg1ODQ1",cover:"https://i.biliimg.com/bfs/im/60cfc166aacf16f16265a663ed4111ceb6568f3a.png@70w_70h_1c.webp",},
-		{title:"无赖",artist:"郑中基",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg1MTk1",cover:"	https://i.biliimg.com/bfs/im/3771fed2d84bbe5dee0c56d8fc6a3f11d16a757d.jpg@70w_70h_1c.webp",},
-		{title:"习惯失恋",artist:"容祖儿",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wHpHjvjf7c36LlnQ4XyXprbckwMg36ZcvGm&quality=128&_t=1706803815472&token=20230327.8fe949477a743b482869270bd1706861",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000003l02MY0vw8vs.jpg",},
-		{title:"活着viva(女版)",artist:"应嘉俐",mp3:"https://api.liumingye.cn/m/api/link?id=b3f634HzOLrfMF9SfoFZoZlfJR0QElpyEyDZxLaUFi6xxTGH1NRI&quality=128&_t=1706804689847&token=20230327.3585105bc8ed3b66324d4dff44641211",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000000khOzC0Qhtto.jpg",},
-		{title:"野孩子",artist:"杨千嬅",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wfoQjKyeLJi7b1jT9byWszZe0MPgno&quality=128&_t=1706805025063&token=20230327.d1ef3757558850c4e89c0eaa08295f9b",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000001mImhQ4doM89.jpg",},
-		{title:"稀客",artist:"杨千嬅",mp3:"https://api.liumingye.cn/m/api/link?id=m3f63OtUGNZoMDio1KvYG6T84ksjKcPksLXuh1VA7dWSL0qjZFeLha7Qr2x7Be5k&quality=128&_t=1706804993351&token=20230327.e35d85b015d7384cad9d094aea5a4b5a",cover:"https://p2.music.126.net/8w4C39C2OY2fRANvkSXo9Q==/109951163270254519.jpg?param=130y130",},
-		{title:"黑夜中漫舞",artist:"陈奕迅",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzIxMzExNDQwMl8xMDAwMDI2MjA=",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000004S8YQr3UmEbG.jpg",},
-		{title:"在路上",artist:"康小景",mp3:"./music/康小景在路上.ogg",cover:"https://y.qq.com/music/photo_new/T002R300x300M000002pzOKB0MXSDC_1.jpg?max_age=2592000",},
-	    {title:"董小姐",artist:"宋冬野",mp3:"https://api.liumingye.cn/m/api/link?id=d3f636iePH3nJMVUD1wW8GTPhfbZh6ehpFdLyW8PYfUMPjH2Xeg&quality=128&_t=1706805136616&token=20230327.9239512a73966b406c21ea0b75400755",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000002VeS6r4L5fLZ.jpg",},
-		{title:"南国之舞",artist:"梁翘柏",mp3:"https://api.liumingye.cn/m/api/link?id=m3f63OtUGNZoMDio1Kv5Vvz84wZucIvx4fin12VE7dWSL0qjZFeLha7oq0RrPcZs&quality=128&_t=1706805184479&token=20230327.a45ea04c8336b0ecd6c06ebe81898a8c",cover:"https://p2.music.126.net/lHwwVluAutDy0FmpaslYiw==/5905476953005960.jpg?param=130y130",},
-	    {title:"弥敦道",artist:"洪卓立",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjYzODY0Nl8yMjQ3NDg4Mjkz",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M000000aMFTq0Ejfqb.jpg",},
-	    {title:"不必在乎我是谁",artist:"梁静茹",mp3:"https://res.wx.qq.com/voice/getvoice?mediaid=MzIxMzExNDQwMl8xMDAwMDg2MDE=",cover:"https://y.gtimg.cn/music/photo_new/T002R300x300M0000028Pdb00tG9aA.jpg",},
-	    
-	];
-  var isRotate = true;
-  var autoplay = false;
-  // {title:"",artist:"",mp3:"https://www.hifini.com/",cover:"",},
-</script>
-<script src="./js/player.js"></script>
-<script>
-
-function bgChange(){
-	var lis= $('.lib');
-	for(var i=0; i<lis.length; i+=2){
-	    lis[i].style.background = 'rgba(246, 246, 246, 0.7)';
-    }
-}
-window.onload = bgChange;
-</script>
-<!--music-->
-
-<!--m_pic-->
+<!--m_pic
 <script>
 function picsLoad(){
 	var	picsList = [
-		{title:"",vertical:true,src:"./img/1.jpg",content:"拍摄于24年元旦",},
-		{title:"",vertical:true,src:"./img/pugonying.jpeg",content:"不以物喜，不以己悲",},
-		{title:"",vertical:true,src:"./img/xiaoxrk.jpeg",content:"无言的爱",},
-		{title:"",vertical:true,src:"./img/feiniao.jpeg",content:"像飞鸟一般，自由翱翔",},
-		{title:"",vertical:false,src:"./img/1705689014646.jpeg",content:"日出的光芒",},
-		{title:"",vertical:true,src:"./img/me2.jpg",content:"内涵及才识是一个人独特的魅力，如何让自己拥有？保持学习和进步。",},
+		{title:"",vertical:true,src:"./img/mypics/1.jpg",content:"拍摄于24年元旦",},
+		{title:"",vertical:true,src:"./img/mypics/pugonying.jpeg",content:"不以物喜，不以己悲",},
+		{title:"",vertical:true,src:"./img/mypics/xiaoxrk.jpeg",content:"无言的爱",},
+		{title:"",vertical:true,src:"./img/mypics/feiniao.jpeg",content:"像飞鸟一般，自由翱翔",},
+		{title:"",vertical:false,src:"./img/mypics/1705689014646.jpeg",content:"日出的光芒",},
+		{title:"",vertical:true,src:"./img/mypics/me2.jpg",content:"内涵及才识是一个人独特的魅力，如何让自己拥有？保持学习和进步。",},
+		{title:"",vertical:true,src:"./img/mypics/live_1.jpg",content:"生活，挺好的！",},
+		{title:"",vertical:true,src:"./img/mypics/flower.jpg",content:"",},
 		
 	];
 	console.log(picsList.length)
