update-20240715 love self

--- a/index.html
+++ b/index.html
@@ -640,9 +640,10 @@ mPicLoad();
 $(function(){
 	$('body').addClass('reveal');
 	var	messageList = [
-		{num:"1", title:"20240414_1",time:"20240414", def:true, content:"想找你却找不到一个合适理由。\n\n也许，喜欢一个人本身并不需要理由。\n\n又或许，喜欢就是理由！"},
+		{num:"1", title:"20240414_1",time:"20240414", def:false, content:"想找你却找不到一个合适理由。\n\n也许，喜欢一个人本身并不需要理由。\n\n又或许，喜欢就是理由！"},
 		{num:"2", title:"20240417_1",time:"20240417", def:false, content:"勇敢一点...\n\n嗯......\n\n以及睡个好觉，晚安了。"},
-		{num:"3", title:"关于爱你",time:"20240610", def:true, content:"喜欢，是那么一件纯粹的事，\n\n因为我喜欢你，\n\n所以想要对你好，希望你开心，\n\n而不是因为我喜欢你，\n\n所以你也得喜欢我。\n\n\n爱，是一种克制，\n\n因为爱你，所以不忍对你造成打扰及困扰，\n\n又因为爱你，所以忍不住去打扰你。"},
+		{num:"3", title:"关于爱你",time:"20240610", def:false, content:"喜欢，是那么一件纯粹的事，\n\n因为我喜欢你，\n\n所以想要对你好，希望你开心，\n\n而不是因为我喜欢你，\n\n所以你也得喜欢我。\n\n\n爱，是一种克制，\n\n因为爱你，所以不忍对你造成打扰及困扰，\n\n又因为爱你，所以忍不住去打扰你。"},
+		{num:"4", title:"关于爱我",time:"20240715", def:true, content:"读书写字\n\n运动锻炼\n\n工作挣钱"},
 		
 	];
 	function senMsg(letter){
